# ripOLE

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTORS  INSTALL  Makefile  README  logger.c  ole.c  olestream-unwrap.c  pldstr.c  ripole.c
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
